# samdul01food

./: .firebaserc  Dockerfile  README.md  pyproject.toml
.firebase/: hosting.cHVibGlj.cache
LB/: vhost.conf
public/: index.html  index2.html
src/samdul01food/: main.py  save.py
